tests/language_modules/17_math_module/valid/math_import_declaration.vf
module MathImportDeclaration

import Math exposing sin, sqrt

procedure main()
is
    let root: Double = Math.sqrt(4.0)
    check root = 2.0
end main

end MathImportDeclaration