tests/language_modules/17_math_module/invalid_semantics/unknown_math_function.vf
module UnknownMathFunction

procedure main()
is
    let result_value: Double = Math.log(10.0)
    check result_value = 1.0
end main

end UnknownMathFunction